# opentelemetry-rust-contrib

opentelemetry-aws/: Cargo.toml
opentelemetry-aws/src/detector/: mod.rs
opentelemetry-aws/src/detector/ec2/: instance_metadata.rs  mod.rs
