[package]
name = "opentelemetry-aws"
version = "0.12.0"
description = "AWS exporters and propagators for OpenTelemetry"
homepage = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-aws"
repository = "https://github.com/open-telemetry/opentelemetry-rust-contrib/tree/main/opentelemetry-aws"
readme = "README.md"
categories = [
    "development-tools::debugging",
    "development-tools::profiling",
]
keywords = ["opentelemetry", "tracing"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.65"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["trace"]
trace = ["opentelemetry/trace", "opentelemetry_sdk/trace"]
detector-aws-lambda = ["dep:opentelemetry-semantic-conventions"]
detector-aws-ec2 = ["dep:opentelemetry-semantic-conventions", "dep:reqwest", "dep:serde_json", "dep:serde"]

[dependencies]
once_cell = "1.12"
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
reqwest = {version = "0.12.5", optional = true, features = ["blocking", "json"]}
serde_json = { version = "1.0.120", optional = true }
serde = {version = "1.0.204", optional = true}

[dev-dependencies]
opentelemetry_sdk = { workspace = true, features = ["testing"] }
opentelemetry-http = { workspace = true }
opentelemetry-stdout = { workspace = true, features = ["trace"] }
hyper = { version = "1.4.1" }
tokio = { version = "1.0", features = ["macros", "rt"] }
sealed_test = "1.1.0"
mockito = "1.4.0"
